Update doc and setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [nosetests]
-cover-package=facturo
+cover-package=facturo.core
 cover-html=true
 cover-erase=true
 cover-inclusive=true
 verbosity=2
 detailed-errors=1
-where=facturo/tests
+where=facturo/core/tests
 
 [build_sphinx]
 source-dir = doc/source
